--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "globals": "^16.5.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.2"
   }
